<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_txt"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_login_to_your_account_txt"
            android:gravity="center"
            android:layout_marginTop="5dp"/>



        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/username_Et"
            android:background="@drawable/round_back_dark_blue_16"
            android:padding="12dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password_Et"
            android:background="@drawable/round_back_dark_blue_16"
            android:padding="12dp"
            android:inputType="textPassword"
            android:layout_marginBottom="46dp"/>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogIn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/login_btn"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:padding="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_txt"
                android:gravity="center"/>

            <TextView
                android:id="@+id/buttonSignUpInSignInPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_btn_in_login_page"
                android:textColor="@color/primary"
                android:layout_marginStart="10dp"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>